kubernetes/apps/production/rocketchat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: home-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - otarios.kryoseu.com
    secretName: rocketchat-tls
  rules:
  - host: otarios.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocketchat-server
            port:
              number: 3000
